Merged /httpd/httpd/trunk:r1864435,1864438,1864450-1864451,1864464 from trunk:

*) modules/filters: PR 63633: Fix broken compilation when using old GCC (<4.2.x).



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1864469 13f79535-47bb-0310-9956-ffa450edef68